add ability for user login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
   </head>
 
   <body>
-    <%= render partial: 'nav/nav-bar' %>
+    <% if params[:controller] == 'sessions' && params[:action] == 'new'%>
+      <%= render partial: 'nav/empty-nav' %>
+    <% else %>
+      <%= render partial: 'nav/nav-bar' %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
