--- a/app/views/nav/_nav-bar.html.erb
+++ b/app/views/nav/_nav-bar.html.erb
@@ -1,1 +1,9 @@
-<%= link_to "Create New User", new_user_path %>
+  <nav>
+    <% if current_user %>
+      <h1>Welcome, <%= current_user.username %>!</h1>
+      <%= link_to "Log Out", logout_path %>
+    <% else %>
+      <%= link_to "Sign Up", new_user_path %>
+      <%= link_to "Log In", login_path %>
+    <% end %>
+  </nav>
