--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -5,6 +5,11 @@
     <div class="">
       <%= blog.title %>
       <%= blog.blurb %>
+      <% if blog.categories %>
+        <%= blog.categories.each do |category| %>
+        <%= link_to category.name, category_path(category) %>
+        <% end %>
+      <% end %>
     </div>
     <% end %>
   </article>
