add blog show page

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -4,6 +4,7 @@
     <img src="<%= blog.image %>" class="photo">
     <div class="">
       <%= blog.title %>
+      <%= blog.created_date %>
       <%= blog.blurb %>
       <% if blog.categories %>
         <% blog.categories.each do |category| %>
