--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,7 @@
      font-size:100%;
      vertical-align:baseline;
      background:transparent;
+     font-family: 'Maitree', serif;
  }
 
 #navigation {
@@ -89,5 +90,46 @@
 .flex-center {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+#main-stage {
+  width: 100%;
+  display: flex;
+  border: 2px solid red;
+}
+
+#content {
+ width: 70%;
+ border: 2px solid blue;
+}
+
+#category-bar {
+  width: 30%;
+  border: 2px solid green;
+}
+
+.category-box {
+  display:inline-block;
+  width: 80%;
+  height: 160px;
+  margin-top: 25px;
+  border-radius: 10px;
+  background-color: rgb(10, 10, 10);
+  text-decoration: none;
+  color: white;
+  font-size: 30px;
+  font-family: 'Maitree', serif;
+  border: 2px solid green;
+}
+
+.fill-box {
+  width: 100%;
+  height: 100%;
+}
+
+.flex-categories {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
