--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,7 +1,7 @@
 <% if @blog %>
   <% if @categories %>
     <% @categories.each do |category| %>
-    <%= category.name %>
+    <%= link_to category.name, category_path(category) %>
     <% end %>
   <% end %>
   <%= @blog.title %>
