--- a/app/views/admin/blogs/new.html.erb
+++ b/app/views/admin/blogs/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Admin Create Blog</h1>
-<%= form_for @blog do |f| %>
+<%= form_for [:admin, @blog] do |f| %>
 <%= f.collection_check_boxes :categories, Category.all, :id, :name %>
 <%= f.label :title %>
 <%= f.text_field :title %>
