--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,12 +4,25 @@
     <%= link_to category.name, category_path(category) %>
     <% end %>
   <% end %>
+
   <%= @blog.title %>
   <%= @blog.created_date %>
   <img src="<%= @blog.image %>" class="photo">
   <%= @blog.body %>
+
   <% if current_admin? %>
   <%= button_to "Delete", admin_blog_path(@blog), method: :delete %>
   <%= button_to "Edit", edit_admin_blog_path(@blog), method: :get %>
   <% end %>
+
+  <% if @comments %>
+    <% @comments.each do |comment| %>
+    <div class="">
+      <%= comment.user.username %>
+      <%= comment.body %>
+    </div>
+    <% end %>
+  <% end %>
+
+  <%= render partial: 'comments/form' %>
 <% end %>
