--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <% if current_user %>
   <%= form_for [@blog, @comment] do |f| %>
-    <%= hidden_field_tag 'comment[user_id]', @user_id %>
+    <%= hidden_field_tag 'comment[user_id]', current_user.id %>
     <%= hidden_field_tag 'comment[blog_id]', @blog.id %>
     <%= f.label :body, "Your Comment" %>
     <%= f.text_area :body %>
