--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -22,9 +22,9 @@
       <%= comment.created_time %>
       <%= comment.body %>
       <% if (comment.user == current_user) || current_admin? %>
-        <%= button_to "Delete", blog_comment_path(@blog, comment), method: :delete %>
+        <%= button_to "Delete Comment", blog_comment_path(@blog, comment), method: :delete %>
+        <%= button_to "Edit Comment", edit_blog_comment_path(@blog, comment), method: :get %>
       <% end %>
-      <%=  %>
     </div>
     <% end %>
   <% end %>
