--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
 <% if current_user %>
-  <%= form_for [@blog, @comment] do |f| %>
+  <%= form_for [@blog, :default, @comment] do |f| %>
     <%= hidden_field_tag 'comment[user_id]', current_user.id %>
     <%= hidden_field_tag 'comment[blog_id]', @blog.id %>
     <%= f.label :body, "Your Comment" %>
