--- a/app/views/default/comments/edit.html.erb
+++ b/app/views/default/comments/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@blog, @comment] do |f| %>
+<%= form_for [@blog, :default, @comment] do |f| %>
   <%= hidden_field_tag 'comment[user_id]', current_user.id %>
   <%= hidden_field_tag 'comment[blog_id]', @blog.id %>
   <%= f.label :body, "Your Comment" %>
