--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,9 +35,17 @@
      font-family: 'Maitree', serif;
  }
 
+ #wide-nav {
+   width: 100%;
+   height: 52px;
+   background-color: rgb(10, 10, 10);
+   display: flex;
+   justify-content: center;
+ }
+
 #navigation {
-  width: 100%;
-  height: 52px;
+  width: 1200px;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   background-color: rgb(10, 10, 10);
@@ -58,6 +66,7 @@
   font-family: 'Maitree', serif;
   grid-column: 12;
   border-left: 1px solid white;
+  border-right: 1px solid white;
 }
 
 #sign-up {
@@ -75,6 +84,16 @@
   color: white;
   font-family: 'Maitree', serif;
   grid-column: 12;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+}
+#home-page {
+  height: 100%;
+  text-decoration: none;
+  color: white;
+  font-family: 'Maitree', serif;
+  grid-column: 1;
+  border-right: 1px solid white;
   border-left: 1px solid white;
 }
 
@@ -94,25 +113,28 @@
 }
 
 #main-stage {
+  width: 1200px;
+  display: flex;
+  flex-direction: column;
+}
+
+#all-content {
   width: 100%;
   display: flex;
-  border: 2px solid red;
 }
 
 #content {
  width: 70%;
- border: 2px solid blue;
 }
 
 #category-bar {
   width: 30%;
-  border: 2px solid green;
 }
 
 .category-box {
   display:inline-block;
-  width: 80%;
-  height: 160px;
+  width: 280px;
+  height: 140px;
   margin-top: 25px;
   border-radius: 10px;
   background-color: rgb(10, 10, 10);
@@ -120,7 +142,6 @@
   color: white;
   font-size: 30px;
   font-family: 'Maitree', serif;
-  border: 2px solid green;
 }
 
 .fill-box {
@@ -132,4 +153,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#meat-n-bones {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
