--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     <% else %>
       <%= render partial: 'nav/nav-bar' %>
     <% end %>
-    <%= yield %>
+    <section id="meat-n-bones">
+      <%= yield %>
+    </section>
   </body>
 </html>
