--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,7 +32,7 @@
      font-size:100%;
      vertical-align:baseline;
      background:transparent;
-     font-family: 'Maitree', serif;
+     font-family: georgia;
  }
 
  #wide-nav {
@@ -55,7 +55,7 @@
   height: 100%;
   text-decoration: none;
   color: white;
-  font-family: 'Maitree', serif;
+  font-family: georgia;
   grid-column: 10 / 12;
 }
 
@@ -63,7 +63,7 @@
   height: 100%;
   text-decoration: none;
   color: white;
-  font-family: 'Maitree', serif;
+  font-family: georgia;
   grid-column: 12;
   border-left: 1px solid white;
   border-right: 1px solid white;
@@ -82,7 +82,7 @@
   height: 100%;
   text-decoration: none;
   color: white;
-  font-family: 'Maitree', serif;
+  font-family: georgia;
   grid-column: 12;
   border-left: 1px solid white;
   border-right: 1px solid white;
@@ -91,7 +91,7 @@
   height: 100%;
   text-decoration: none;
   color: white;
-  font-family: 'Maitree', serif;
+  font-family: georgia;
   grid-column: 1;
   border-right: 1px solid white;
   border-left: 1px solid white;
@@ -101,7 +101,7 @@
   height: 100%;
   text-decoration: none;
   color: white;
-  font-family: 'Maitree', serif;
+  font-family: georgia;
   grid-column: 12;
   border-left: 1px solid white;
 }
@@ -109,6 +109,11 @@
 .flex-center {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.flex-start {
+  display: flex;
   align-items: center;
 }
 
@@ -140,8 +145,8 @@
   background-color: rgb(10, 10, 10);
   text-decoration: none;
   color: white;
-  font-size: 30px;
-  font-family: 'Maitree', serif;
+  font-size: 20px;
+  font-family: georgia;
 }
 
 .fill-box {
@@ -159,4 +164,9 @@
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.hidden-button {
+  margin: 10px;
+  background-color: rgb(246, 246, 246);
 }
