--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -8,7 +8,7 @@
   <section id="all-content">
     <article id="content">
       <div class="cat-title bottom-10">
-        <h1 class="font-30"><%= @category.name.upcase %></h1>
+        <h1 class="font-30" id="category-title"><%= @category.name.upcase %></h1>
         <% if current_admin? %>
         <%= button_to "Delete", admin_category_path(@category), method: :delete, class: 'hidden-button' %>
         <% end %>
