style login and sign up pages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -102,8 +102,9 @@
   text-decoration: none;
   color: white;
   font-family: georgia;
-  grid-column: 12;
+  grid-column: 1;
   border-left: 1px solid white;
+  border-right: 1px solid white;
 }
 
 .flex-center {
