add create blog button for admin

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -8,7 +8,9 @@
 
   <section id="all-content">
     <article id="content">
-
+      <% if current_admin? %>
+        <%= button_to "Create New Blog", new_admin_blog_path, method: 'get', class: 'hidden-button' %>
+      <% end %>
       <% @blogs.each do |blog| %>
       <div class="blog-box">
         <a href="<%= blog_path(blog) %>" class="fill-block"><img src="<%= blog.image %>" class="photo"></a>
