add category image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BlogCity</title>
+    <title>Via Victoria</title>
     <%= csrf_meta_tags %>
-
+    <link rel="shortcut icon" href="http://www.via-victoria.com/wp-content/uploads/2017/03/favicon.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Maitree" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
@@ -13,6 +13,6 @@
     <%= render partial: 'nav/nav-bar' %>
     <section id="meat-n-bones">
       <%= yield %>
-    </section> 
+    </section>
   </body>
 </html>
