--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -15,6 +15,9 @@
           <h3 class="login-label"><%= f.label :name %></h3>
           <%= f.text_field :name, class: 'login-text'%>
 
+          <h3 class="login-label"><%= f.label :image %></h3>
+          <%= f.text_field :image, class: 'login-text'%>
+
           <%= f.submit "Create Category", class: 'comment-button login-button font-15' %>
         </div>
       <% end %>
