--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -127,6 +127,7 @@
 #all-content {
   width: 100%;
   display: flex;
+  justify-content: space-between;
 }
 
 #content {
@@ -134,7 +135,7 @@
 }
 
 #category-bar {
-  width: 30%;
+  width: 25%;
 }
 
 .category-box {
@@ -170,4 +171,41 @@
 .hidden-button {
   margin: 10px;
   background-color: rgb(246, 246, 246);
+}
+
+.flex-it {
+  display: flex;
+  align-items: flex-end;
+}
+
+.cat-text-box {
+  background-color: rgb(255, 255, 255);
+  color: black;
+  font-size: 14px;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  padding: 5px;
+}
+
+.about-me {
+  width: 300px;
+  height: 400px;
+  background-color: rgb(246, 246, 246);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about-photo {
+  width: 260px;
+}
+
+.about-text {
+  width: 230px;
+  font-size: 13px;
+}
+
+.t-b-10 {
+  margin-bottom: 15px;
+  margin-top: 10px;
 }
