--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,6 +41,14 @@
    background-color: rgb(10, 10, 10);
    display: flex;
    justify-content: center;
+   position: fixed;
+
+ }
+
+ #footer {
+   width: 100%;
+   height: 52px;
+   background-color: rgb(10, 10, 10);
  }
 
 #navigation {
@@ -65,8 +73,8 @@
   color: white;
   font-family: georgia;
   grid-column: 12;
-  border-left: 1px solid white;
-  border-right: 1px solid white;
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
 }
 
 #sign-up {
@@ -75,7 +83,7 @@
   color: white;
   font-family: 'Maitree', serif;
   grid-column: 11;
-  border-left: 1px solid white;
+  border-left: 1px solid gray;
 }
 
 #log-in {
@@ -84,8 +92,8 @@
   color: white;
   font-family: georgia;
   grid-column: 12;
-  border-left: 1px solid white;
-  border-right: 1px solid white;
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
 }
 #home-page {
   height: 100%;
@@ -93,8 +101,8 @@
   color: white;
   font-family: georgia;
   grid-column: 1;
-  border-right: 1px solid white;
-  border-left: 1px solid white;
+  border-right: 1px solid gray;
+  border-left: 1px solid gray;
 }
 
 #go-back {
@@ -122,6 +130,7 @@
   width: 1050px;
   display: flex;
   flex-direction: column;
+  margin-bottom: 170px;
 }
 
 #all-content {
