--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -5,6 +5,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 65px;
+  padding-bottom: 10px;
   border-bottom: 1px solid rgb(229, 229, 229);
   margin-bottom: 30px;
 }
