--- a/app/assets/stylesheets/blogs/show.css
+++ b/app/assets/stylesheets/blogs/show.css
@@ -35,6 +35,12 @@
   font-size: 45px;
 }
 
+.font-35 {
+  font-size: 35px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
 .bottom-10 {
   margin-bottom: 10px
 }
