--- a/app/views/admin/blogs/new.html.erb
+++ b/app/views/admin/blogs/new.html.erb
@@ -8,7 +8,7 @@
   <section id="all-content">
     <article id="content">
       <h1 class="log-in-title font-30">Create New Blog</h1>
-      <%= form_for [:admin, @blog], html: {class: 'login-form'} do |f| %>
+      <%= form_for [:admin, @presenter.blog], html: {class: 'login-form'} do |f| %>
         <div class="inner-log-wide">
           <h1 class="login-label">Category</h1>
           <div class="cat-check-box">
