--- a/app/views/nav/_categories.html.erb
+++ b/app/views/nav/_categories.html.erb
@@ -7,16 +7,14 @@
   <p class="bolded">VICTORIA FOX-COLLIS</p>
   <span class="about-text t-b-10">Hi I'm Victoria, the average, goofy, popcorn obsessed, smartass (really though), life loving, fun loving, young woman behind this blog.</span>
 </div>
-<% if @category_bar %>
   <h3 class="category-head">Categories</h3>
   <% if current_admin? %>
     <%= button_to "Create New Category", new_admin_category_path, method: :get, class: 'hidden-button' %>
   <% end %>
-  <% @category_bar.each do |category| %>
+  <% @presenter.category_bar.each do |category| %>
   <a style="background-image: url('<%= category.image %>'); background-size: cover;" class="category-box flex-it" href="/categories/<%= category.id %>">
     <span class="cat-text-box">
       <%= category.name.upcase %>
     </span>
   </a>
   <% end %>
-<% end %>
